fix build errors

--- a/src/pages/controller.mdx
+++ b/src/pages/controller.mdx
@@ -1,6 +1,6 @@
 # Controller operations
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Learn how to:
 
@@ -14,6 +14,7 @@ A _controller_ is a special Axelar account with privileges to execute certain `a
   Most participants do not need this information
 
 Most Axelar roles (end user, node operator, validator, etc) do not need the information in this article. Many CLI commands in this article can be executed only from a controller account on Axelar network.
+
 </Callout>
 
 ## Prerequisites
