--- a/src/pages/dev/general-message-passing/cosmos-gmp.mdx
+++ b/src/pages/dev/general-message-passing/cosmos-gmp.mdx
@@ -1,8 +1,7 @@
 ---
 templateEngineOverride: md
 ---
-import { Callout } from '/src/components/callout'
-
+import { Callout } from "/src/components/callout"
 
 # Cosmos General Message Passing
 
