--- a/src/pages/dev/general-message-passing/debug/error-debugging.mdx
+++ b/src/pages/dev/general-message-passing/debug/error-debugging.mdx
@@ -1,6 +1,6 @@
 # Execution error messages
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 There are two reasons that executions fail:
 
