--- a/src/pages/dev/general-message-passing/gmp-tokens-with-messages.mdx
+++ b/src/pages/dev/general-message-passing/gmp-tokens-with-messages.mdx
@@ -1,7 +1,7 @@
 
 # Call a contract on chain B from chain A and attach some tokens
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 To call chain B from chain A and send some tokens along the way, the user needs to call `callContractWithToken` on the gateway of chain A, specifying:
 
