--- a/src/pages/learn/cli/axl-to-evm.mdx
+++ b/src/pages/learn/cli/axl-to-evm.mdx
@@ -1,6 +1,6 @@
 # Send AXL to an EVM chain
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Transfer AXL tokens from Axelar to an EVM chain using the terminal.
 
