--- a/src/pages/learn/cli/ust-to-evm.mdx
+++ b/src/pages/learn/cli/ust-to-evm.mdx
@@ -1,7 +1,6 @@
 # Send UST to an EVM chain
 
-import { Callout } from '/src/components/callout'
-import Tabs from '../../../components/tabs'
+import { Callout } from "/src/components/callout"
 
 Transfer UST tokens from Terra to an EVM chain using the terminal.
 
