--- a/src/pages/node/config-node.mdx
+++ b/src/pages/node/config-node.mdx
@@ -1,6 +1,6 @@
 # Node configuration
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 ## Prerequisites
 
