--- a/src/pages/node/join-genesis.mdx
+++ b/src/pages/node/join-genesis.mdx
@@ -1,7 +1,6 @@
 # Genesis sync
 
-import { Callout } from '/src/components/callout'
-import Tabs from '../../components/tabs'
+import { Callout } from "/src/components/callout"
 
 import UpgradePath from '/src/upgrade-path.md';
 import UpgradePathTestnet from '/src/upgrade-path-testnet.md';
