--- a/src/pages/node/join-old.mdx
+++ b/src/pages/node/join-old.mdx
@@ -1,6 +1,6 @@
 # Old instructions: Quick sync (recommended)
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Start your Axelar node and download the blockchain.
 
