--- a/src/pages/node/join.mdx
+++ b/src/pages/node/join.mdx
@@ -1,6 +1,6 @@
 # Quick sync
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Start your Axelar node using a snapshot.
 
