--- a/src/pages/resources.mdx
+++ b/src/pages/resources.mdx
@@ -1,4 +1,5 @@
-import { Callout } from '/src/components/callout';
+import { Callout } from "/src/components/callout"
+
 import Resources from "../components/resources";
 
 
