--- a/src/pages/resources/mainnet/upgrades/v16.mdx
+++ b/src/pages/resources/mainnet/upgrades/v16.mdx
@@ -1,6 +1,6 @@
 # Mainnet upgrade: v0.16
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Instructions for `2022-Mar-21` mainnet upgrade to axelar-core `v0.16.1`.
 
