--- a/src/pages/resources/mainnet/upgrades/v18.mdx
+++ b/src/pages/resources/mainnet/upgrades/v18.mdx
@@ -1,6 +1,6 @@
 # Mainnet upgrade: v0.18
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Instructions for `2022-Jun-8` mainnet upgrade to axelar-core `v0.18.3`, vald `v0.18.3`, and tofnd `v0.10.1`.
 
