--- a/src/pages/resources/mainnet/upgrades/v20.mdx
+++ b/src/pages/resources/mainnet/upgrades/v20.mdx
@@ -1,6 +1,6 @@
 # Mainnet upgrade: v0.20
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Instructions for `2022-Aug-8` mainnet upgrade to axelar-core `v0.20.0`, vald `v0.20.0`, and tofnd `v0.10.1`.
 
