--- a/src/pages/resources/mainnet/upgrades/v26.mdx
+++ b/src/pages/resources/mainnet/upgrades/v26.mdx
@@ -1,6 +1,6 @@
 # Mainnet upgrade: v0.26
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Instructions for `2022-Sep-12` mainnet upgrade to axelar-core `v0.26.5`, vald `v0.26.5`, and tofnd `v0.10.1`.
 
