--- a/src/pages/resources/mainnet/upgrades/v28.mdx
+++ b/src/pages/resources/mainnet/upgrades/v28.mdx
@@ -1,6 +1,6 @@
 # Mainnet upgrade: v0.28
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Instructions for `2022-Nov-29` mainnet upgrade to axelar-core `v0.28.0`, vald `v0.28.0`, and tofnd `v0.10.1`.
 
