--- a/src/pages/resources/satellite.mdx
+++ b/src/pages/resources/satellite.mdx
@@ -1,6 +1,6 @@
 # Satellite
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 ## What is Satellite?
 
