--- a/src/pages/resources/testnet/upgrades/v17.mdx
+++ b/src/pages/resources/testnet/upgrades/v17.mdx
@@ -1,6 +1,6 @@
 # Testnet-1 upgrade: v0.17
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Instructions for `2022-Apr-12` testnet upgrade to axelar-core `v0.17.3`, vald `v0.17.3`, and tofnd `v0.10.1`.
 
