--- a/src/pages/resources/wrapped-tokens.mdx
+++ b/src/pages/resources/wrapped-tokens.mdx
@@ -1,6 +1,6 @@
 # Convert between native and wrapped tokens
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Axelar supports cross-chain transfer of the following native tokens via their wrapped ERC-20 versions:
 
@@ -64,6 +64,7 @@ In the "withdraw" field enter the amount of wrapped tokens (denominated in Wei) 
 For the "withdraw" field (to convert wrapped to native) the amount of wrapped tokens is denominated in Wei where 1 wrapped token = 10^18 Wei.  Example: to convert `0.2` WETH to ETH enter `200000000000000000`.
 
 By contrast, for the "deposit" field (to convert native to wrapped tokens) the amount of native is denominated in native units. Example: to convert `0.2` ETH to WETH enter `0.2`.
+
 </Callout>
 
 As above, click "write", approve the transaction, and check your Metamask for the new native tokens.
