--- a/src/pages/validator/external-chains/ethereum.mdx
+++ b/src/pages/validator/external-chains/ethereum.mdx
@@ -1,8 +1,6 @@
 # Ethereum
 
-import { Callout } from '/src/components/callout'
-import Tabs from '../../../components/tabs'
-import { Tabs as NextraTabs, Tab as NextraTab } from 'nextra-theme-docs'
+import { Callout } from "/src/components/callout"
 
 Set up your Ethereum Mainnet or Goerli Testnet RPC node
 
@@ -145,24 +143,24 @@ vald's `config.toml`
 </Callout>
 
 
-<NextraTabs items={['Mainnet', 'Goerli Testnet']}>
-  <NextraTab>
+<tabs>
+  <tab-item title="Mainnet">
   ```bash
   [[axelar_bridge_evm]]
   name = "Ethereum"
   rpc_addr = "http://IP:PORT"
   start-with-bridge = true
   ```
-  </NextraTab>
-  <NextraTab>
+  </tab-item>
+  <tab-item title="Goerli Testnet">
   ```bash
   [[axelar_bridge_evm]]
   name = "ethereum-2"
   rpc_addr = "http://IP:PORT"
   start-with-bridge = true
   ```
-  </NextraTab>
-</NextraTabs>
+  </tab-item>
+</tabs>
 
 
 ### Upgrade geth
