--- a/src/pages/validator/external-chains/fantom.mdx
+++ b/src/pages/validator/external-chains/fantom.mdx
@@ -1,6 +1,6 @@
 # Fantom
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Set up your Fantom Mainnet or Testnet Opera node.
 
