--- a/src/pages/validator/external-chains/hero.mdx
+++ b/src/pages/validator/external-chains/hero.mdx
@@ -1,6 +1,6 @@
 # Heroes of NFT
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Set up your Heroes of NFT node in Testnet. Heroes of NFT is an Avalanche subnet.
 
