--- a/src/pages/validator/external-chains/polygon.mdx
+++ b/src/pages/validator/external-chains/polygon.mdx
@@ -1,6 +1,6 @@
 # Polygon
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Set up your Polygon Mainnet or Testnet (Mumbai) node.
 
