--- a/src/pages/validator/operations/mnemonic-rotation.mdx
+++ b/src/pages/validator/operations/mnemonic-rotation.mdx
@@ -1,4 +1,4 @@
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 # Rotation of mnemonics in tofnd
 
