--- a/src/pages/validator/setup/config.mdx
+++ b/src/pages/validator/setup/config.mdx
@@ -1,8 +1,7 @@
 # Configure companion processes
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
-import Tabs from '../../../components/tabs'
 
 Axelar validators need two companion processes called `vald` and `tofnd`.
 
