--- a/src/pages/validator/setup/health-check.mdx
+++ b/src/pages/validator/setup/health-check.mdx
@@ -1,6 +1,6 @@
 # Health check
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Check the status of your validator.
 
