--- a/src/pages/validator/setup/manual.mdx
+++ b/src/pages/validator/setup/manual.mdx
@@ -1,8 +1,6 @@
 # Manual setup
 
-import { Callout } from '/src/components/callout'
-
-import Tabs from '../../../components/tabs'
+import { Callout } from "/src/components/callout"
 
 ## Prerequisites
 
@@ -18,13 +16,17 @@ Check the appropriate version for the network accordingly:
 
 <tabs>
 <tab-item title="Mainnet">
- <pre><code>AXELARD_RELEASE=v0.33.1
-TOFND_RELEASE=v0.10.1</code></pre>
+ ```bash
+ AXELARD_RELEASE=v0.33.1
+TOFND_RELEASE=v0.10.1
+```
 
 </tab-item>
 <tab-item title="Testnet">
- <pre><code>AXELARD_RELEASE=v0.33.1
-TOFND_RELEASE=v0.10.1</code></pre>
+ ```bash
+ AXELARD_RELEASE=v0.33.1
+TOFND_RELEASE=v0.10.1
+```
 
 </tab-item>
 </tabs>
@@ -84,11 +86,14 @@ Save this mnemonic somewhere safe and delete the file by ` rm $HOME/.tofnd/expor
 
 <tabs>
 <tab-item title="Mainnet">
- <pre><code>echo export CHAIN_ID=axelar-dojo-1 >> $HOME/.profile</code></pre>
-
+ ```bash
+ echo export CHAIN_ID=axelar-dojo-1 >> $HOME/.profile
+```
 </tab-item>
 <tab-item title="Testnet">
- <pre><code>echo export CHAIN_ID=axelar-testnet-lisbon-3 >> $HOME/.profile</code></pre>
+ ```bash
+ echo export CHAIN_ID=axelar-testnet-lisbon-3 >> $HOME/.profile
+ ```
 
 </tab-item>
 </tabs>
@@ -124,25 +129,29 @@ Initialize your Axelar node, fetch configuration, genesis, seeds.
 
 <tabs>
 <tab-item title="Mainnet">
- <pre><code>axelard init $MONIKER --chain-id $CHAIN_ID
+ ```bash
+ axelard init $MONIKER --chain-id $CHAIN_ID
 wget https://raw.githubusercontent.com/axelarnetwork/axelarate-community/main/configuration/config.toml -O $HOME/.axelar/config/config.toml
 wget https://raw.githubusercontent.com/axelarnetwork/axelarate-community/main/configuration/app.toml -O $HOME/.axelar/config/app.toml
 wget https://axelar-mainnet.s3.us-east-2.amazonaws.com/genesis.json -O $HOME/.axelar/config/genesis.json
 wget https://raw.githubusercontent.com/axelarnetwork/axelarate-community/main/resources/mainnet/seeds.toml -O $HOME/.axelar/config/seeds.toml
 
 # set external ip to your config.json file
-sed -i.bak 's/external_address = \"\"/external_address = \"'"$(curl -4 ifconfig.co)"':26656\"/g' $HOME/.axelar/config/config.toml</code></pre>
+sed -i.bak 's/external_address = \"\"/external_address = \"'"$(curl -4 ifconfig.co)"':26656\"/g' $HOME/.axelar/config/config.toml
+```
 
 </tab-item>
 <tab-item title="Testnet">
- <pre><code>axelard init $MONIKER --chain-id $CHAIN_ID
+ ```bash
+ axelard init $MONIKER --chain-id $CHAIN_ID
 wget https://raw.githubusercontent.com/axelarnetwork/axelarate-community/main/configuration/config.toml -O $HOME/.axelar/config/config.toml
 wget https://raw.githubusercontent.com/axelarnetwork/axelarate-community/main/configuration/app.toml -O $HOME/.axelar/config/app.toml
 wget https://raw.githubusercontent.com/axelarnetwork/axelarate-community/main/resources/testnet/genesis.json -O $HOME/.axelar/config/genesis.json
 wget https://raw.githubusercontent.com/axelarnetwork/axelarate-community/main/resources/testnet/seeds.toml -O $HOME/.axelar/config/seeds.toml
 
 # set external ip to your config.json file
-sed -i.bak 's/external_address = \"\"/external_address = \"'"$(curl -4 ifconfig.co)"':26656\"/g' $HOME/.axelar/config/config.toml</code></pre>
+sed -i.bak 's/external_address = \"\"/external_address = \"'"$(curl -4 ifconfig.co)"':26656\"/g' $HOME/.axelar/config/config.toml
+```
 
 </tab-item>
 </tabs>
@@ -151,21 +160,25 @@ sed -i.bak 's/external_address = \"\"/external_address = \"'"$(curl -4 ifconfig.
 
 <tabs>
 <tab-item title="Mainnet">
- <pre><code>axelard tendermint unsafe-reset-all
+ ```bash
+ axelard tendermint unsafe-reset-all
 URL=\`curl -L https://quicksync.io/axelar.json | jq -r '.[] |select(.file=="axelar-dojo-1-pruned")|.url'\`
 echo $URL
 cd $HOME/.axelar/
 wget -O - $URL | lz4 -d | tar -xvf -
-cd $HOME</code></pre>
+cd $HOME
+```
 
 </tab-item>
 <tab-item title="Testnet">
- <pre><code>axelard tendermint unsafe-reset-all
+ ```bash
+ axelard tendermint unsafe-reset-all
 URL=\`curl -L https://quicksync.io/axelar.json | jq -r '.[] |select(.file=="axelartestnet-lisbon-3-pruned")|.url'\`
 echo $URL
 cd $HOME/.axelar/
 wget -O - $URL | lz4 -d | tar -xvf -
-cd $HOME</code></pre>
+cd $HOME
+```
 
 </tab-item>
 </tabs>
