--- a/src/pages/validator/setup/register-broadcaster.mdx
+++ b/src/pages/validator/setup/register-broadcaster.mdx
@@ -1,6 +1,6 @@
 # Register broadcaster proxy
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Axelar validators exchange messages with one another via the Axelar blockchain. Each validator sends these messages from a separate `broadcaster` account.
 
