--- a/src/pages/validator/troubleshoot/recovery.mdx
+++ b/src/pages/validator/troubleshoot/recovery.mdx
@@ -1,6 +1,6 @@
 # Recover from secret data
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 [TODO revise]
 
