--- a/src/pages/validator/troubleshoot/startup.mdx
+++ b/src/pages/validator/troubleshoot/startup.mdx
@@ -1,6 +1,6 @@
 # Start-up issues
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 [TODO revise]
 
