--- a/src/pages/dev/axelarjs-sdk/token-transfer-dep-addr.mdx
+++ b/src/pages/dev/axelarjs-sdk/token-transfer-dep-addr.mdx
@@ -1,6 +1,6 @@
 # Get a deposit address
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 A deposit address is a temporary special address created and monitored by **Axelar's Relayer Services** on behalf of the requester. It is similar to how centralized exchanges generate a monitored, one-time deposit address that facilitates your token transfers. Deposit addresses generally function for up to 24 hours.
 
