--- a/src/pages/dev/general-message-passing/monitoring.mdx
+++ b/src/pages/dev/general-message-passing/monitoring.mdx
@@ -21,7 +21,7 @@ Each GMP call comprises five statuses, as described below.
 - **EXECUTED** informs the executed result whether it is successful or not. If you see an error message in this section, we suggest following this [guide](/dev/debug/error-debugging) to find the root cause and recover the transfer.
 - **GAS REFUNDED** provides the refund information (if any), including the amount of gas paid, the amount of gas used, the refund amount, etc.
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 <Callout emoji="ℹ️">
 	If the `Insufficient Fee` tag appears, it means that the prepaid gas is not enough to relay the transaction. Please follow the [Increase gas payment to the gas receiver on the source chain](/dev/general-message-passing/recovery#increase-gas-payment-to-the-gas-receiver-on-the-source-chain) section to recover the transfer.
