--- a/src/pages/learn/cli.mdx
+++ b/src/pages/learn/cli.mdx
@@ -1,6 +1,6 @@
 # Axelar command-line interface (CLI)
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Some CLI commands require access to a fully synced Axelar node. Learn how to [start your own Axelar node](/node/join).
 
