--- a/src/pages/learn/cli/axl-from-evm.mdx
+++ b/src/pages/learn/cli/axl-from-evm.mdx
@@ -1,6 +1,6 @@
 # Redeem AXL from an EVM chain
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Redeem AXL tokens from an EVM chain to Axelar using the terminal.
 
