--- a/src/pages/learn/cli/ust-from-evm.mdx
+++ b/src/pages/learn/cli/ust-from-evm.mdx
@@ -1,6 +1,6 @@
 # Redeem UST from an EVM chain
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Redeem UST tokens from an EVM chain to Terra using the terminal.
 
