--- a/src/pages/resources/mainnet.mdx
+++ b/src/pages/resources/mainnet.mdx
@@ -1,6 +1,7 @@
 # Mainnet
 
-import { Callout } from "/src/components/callout";
+import { Callout } from "/src/components/callout"
+
 import IBCChannels from "../../components/ibc/channels";
 import TransferFeeCalculator from "../../components/transfer-fee/calculator";
 import EVMChains from "../../components/evm/chains";
