--- a/src/pages/resources/mainnet/upgrades/v19.mdx
+++ b/src/pages/resources/mainnet/upgrades/v19.mdx
@@ -1,6 +1,6 @@
 # Mainnet upgrade: v0.19
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Instructions for `2022-Jun-8` mainnet upgrade to axelar-core `v0.19.2`, vald `v0.19.2`, and tofnd `v0.10.1`.
 
