--- a/src/pages/resources/testnet/upgrades/v19.mdx
+++ b/src/pages/resources/testnet/upgrades/v19.mdx
@@ -1,6 +1,6 @@
 # Testnet-1 upgrade: v0.19
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Instructions for `2022-May-25` testnet upgrade to axelar-core `v0.19.4`, vald `v0.19.4`, and tofnd `v0.10.1`.
 
