--- a/src/pages/resources/testnet/upgrades/v23.mdx
+++ b/src/pages/resources/testnet/upgrades/v23.mdx
@@ -1,6 +1,6 @@
 # Testnet-1 upgrade: v0.23
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Instructions for `2022-Aug-18` testnet upgrade to axelar-core `v0.23.0`, vald `v0.23.0`, and tofnd `v0.10.1`.
 
