--- a/src/pages/resources/testnet/upgrades/v29.mdx
+++ b/src/pages/resources/testnet/upgrades/v29.mdx
@@ -1,6 +1,6 @@
 # Testnet-1 upgrade: v0.29
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Instructions for `2022-Dec-01` testnet upgrade to axelar-core `v0.29.1`, vald `v0.29.1`, and tofnd `v0.10.1`.
 Release can be found [here](https://github.com/axelarnetwork/axelar-core/releases/tag/v0.29.1).
