--- a/src/pages/resources/testnet/upgrades/v32.mdx
+++ b/src/pages/resources/testnet/upgrades/v32.mdx
@@ -1,6 +1,6 @@
 # Testnet-1 upgrade: v0.32
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Instructions for `2023-Feb-21` testnet upgrade to axelar-core `v0.32.2`, vald `v0.32.2`, and tofnd `v0.10.1`.
 Release can be found [here](https://github.com/axelarnetwork/axelar-core/releases/tag/v0.32.2).
