--- a/src/pages/resources/testnet/upgrades/v33.mdx
+++ b/src/pages/resources/testnet/upgrades/v33.mdx
@@ -1,6 +1,6 @@
 # Testnet-1 upgrade: v0.33
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Instructions for `2023-April-3` testnet upgrade to axelar-core `v0.33.1`, vald `v0.33.1`, and tofnd `v0.10.1`.
 Release can be found [here](https://github.com/axelarnetwork/axelar-core/releases/tag/v0.33.1).
