--- a/src/pages/validator/external-chains/celo.mdx
+++ b/src/pages/validator/external-chains/celo.mdx
@@ -1,7 +1,6 @@
 # Celo
 
-import { Callout } from '/src/components/callout'
-import Tabs from '../../../components/tabs'
+import { Callout } from "/src/components/callout"
 
 Set up your CELO Mainnet or Alfajores Testnet RPC node
 
