--- a/src/pages/validator/external-chains/linea.mdx
+++ b/src/pages/validator/external-chains/linea.mdx
@@ -1,7 +1,6 @@
 # Linea
 
-import { Callout } from '/src/components/callout'
-import { Tabs, Tab } from 'nextra-theme-docs'
+import { Callout } from "/src/components/callout"
 
 Set up your Linea Testnet RPC node
 
@@ -36,13 +35,13 @@ In order for `vald` to connect to your Linea node, your `rpc_addr` should be exp
 vald's `config.toml`
 
 
-<Tabs items={['Testnet']}>
-  <Tab>
+<tabs>
+  <tab-item title="Testnet">
   ```bash
   [[axelar_bridge_evm]]
   name = "linea"
   rpc_addr = "http://IP:PORT"
   start-with-bridge = true
   ```
-  </Tab>
-</Tabs>
+  </tab-item>
+</tabs>
