--- a/src/pages/validator/external-chains/moonbeam.mdx
+++ b/src/pages/validator/external-chains/moonbeam.mdx
@@ -1,6 +1,6 @@
 # Moonbeam
 
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 Set up your Moonbeam Mainnet or Testnet (Moonbase-Alpha) node.
 
