--- a/src/pages/validator/external-chains/optimism.mdx
+++ b/src/pages/validator/external-chains/optimism.mdx
@@ -1,8 +1,6 @@
 # Optimism
 
-
-import Tabs from '../../../components/tabs'
-import { Tabs as NextraTabs, Tab as NextraTab, Callout } from 'nextra-theme-docs'
+import { Callout } from "/src/components/callout"
 
 Instructions to set up your Optimism node.
 
@@ -37,24 +35,28 @@ cp .env.example .env
 Set the following config options in `simple-optimism-node/.env`:
 <tabs>
 <tab-item title="Mainnet">
- <pre><code>NETWORK_NAME=mainnet
+ ```bash
+ NETWORK_NAME=mainnet
 NODE_TYPE=full
 BEDROCK_SOURCE=download
 # Your Ethereum RPC node endpoint. As an L2, your Optimism node will verify tx finality by
 # querying your own Ethereum RPC node.
 OP_NODE__RPC_ENDPOINT=
-OP_NODE__RPC_TYPE=basic</code></pre>
+OP_NODE__RPC_TYPE=basic
+```
 
 </tab-item>
 <tab-item title="Testnet">
- <pre><code># only goerli is supported for now
+ ```bash
+ # only goerli is supported for now
 NETWORK_NAME=goerli
 NODE_TYPE=full
 BEDROCK_SOURCE=download
 # Your Ethereum RPC node endpoint. As an L2, your Optimism node will verify tx finality by
 # querying your own Ethereum RPC node.
 OP_NODE__RPC_ENDPOINT=
-OP_NODE__RPC_TYPE=basic</code></pre>
+OP_NODE__RPC_TYPE=basic
+```
 
 </tab-item>
 </tabs>
@@ -174,24 +176,24 @@ use your RPC node only when it has caught up with the latest block height.
 In order for `vald` to connect to your Optimism node, your `rpc_addr` should be exposed in
 vald's `config.toml`
 
-<NextraTabs items={['Mainnet', 'Testnet']}>
-  <NextraTab>
+<tabs>
+  <tab-item title="">
   ```bash
   [[axelar_bridge_evm]]
   name = "optimism"
   rpc_addr = "http://IP:PORT"
   start-with-bridge = true
   ```
-  </NextraTab>
-  <NextraTab>
+  </tab-item>
+  <tab-item title="">
   ```bash
   [[axelar_bridge_evm]]
   name = "optimism"
   rpc_addr = "http://IP:PORT"
   start-with-bridge = true
   ```
-  </NextraTab>
-</NextraTabs>
+  </tab-item>
+</tabs>
 
 ### Common Node Operations
 
