--- a/src/pages/validator/external-chains/overview.mdx
+++ b/src/pages/validator/external-chains/overview.mdx
@@ -1,7 +1,6 @@
 # Overview
 
-import { Callout } from '/src/components/callout'
-import Tabs from '/src/components/tabs'
+import { Callout } from "/src/components/callout"
 
 As a validator for the Axelar network, your Axelar node will vote on the status of external blockchains such as Ethereum, Cosmos, etc. Specifically:
 
