--- a/src/pages/validator/operations/monitoring.mdx
+++ b/src/pages/validator/operations/monitoring.mdx
@@ -1,4 +1,4 @@
-import { Callout } from '/src/components/callout'
+import { Callout } from "/src/components/callout"
 
 # Monitoring a Validator or Node
 
