--- a/src/pages/resources/mainnet.mdx
+++ b/src/pages/resources/mainnet.mdx
@@ -2,10 +2,10 @@
 
 import { Callout } from "/src/components/callout"
 
-import IBCChannels from "../../components/ibc/channels";
-import TransferFeeCalculator from "../../components/transfer-fee/calculator";
-import EVMChains from "../../components/evm/chains";
-import EVMAssets from "../../components/evm/assets";
+import IBCChannels from "/src/components/ibc/channels";
+import TransferFeeCalculator from "/src/components/transfer-fee/calculator";
+import EVMChains from "/src/components/evm/chains";
+import EVMAssets from "/src/components/evm/assets";
 import UpgradePath from "/src/upgrade-path.md";
 
 | Variable              | Value     |
@@ -18,20 +18,21 @@ import UpgradePath from "/src/upgrade-path.md";
 
 <div className="space-y-1 mt-4">
   
-<EVMChains/>
+<EVMChains client:only/>
  
 `Constant Address Deployer`: `0x98b2920d53612483f91f12ed7754e51b4a77919e`
 
 </div>
 
 <div className="space-y-1 mt-4">
-  ### Assets Learn more about [wrapped assets like axlUSDC](/learn/axlusdc).
-  <EVMAssets environment="mainnet" />
+  ### Assets
+  Learn more about [wrapped assets like axlUSDC](/learn/axlusdc).
+  <EVMAssets  client:only environment="mainnet" />
 </div>
 
 <div className="space-y-1 mt-4">
   ## IBC Channels
-  <IBCChannels environment="mainnet" />
+  <IBCChannels  client:only environment="mainnet" />
 </div>
 
 ## Cross-chain relayer gas fee
@@ -48,7 +49,7 @@ The relayer gas fee amount depends only on:
 </Callout>
 
 <div className="space-y-1 mt-4">
-  <TransferFeeCalculator environment="mainnet" />
+  <TransferFeeCalculator  client:only environment="mainnet"/>
 </div>
 
 Example: a transfer of X USDC tokens from Avalanche to Osmosis will have a fee of 1.5 USDC (= 1 USDC for Avalanche + 0.5 USDC for Osmosis),
